--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@types/webpack-env": "^1.13.3",
     "convert-tsconfig-paths-to-webpack-aliases": "^0.9.2",
     "eslint-config-react-tools": "1.x.x",
+    "node-sass": "^4.7.2",
+    "sass-loader": "^6.0.6",
     "serve": "^6.4.1",
     "ts-loader": "^3.1.1",
     "typescript": "^2.6.1"
