--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-router": "^4.2.0",
-    "react-static": "sasuomi/react-static"
+    "react-static": "^5.1.8"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
@@ -27,6 +27,7 @@
     "@types/webpack-env": "^1.13.3",
     "convert-tsconfig-paths-to-webpack-aliases": "^0.9.2",
     "eslint-config-react-tools": "1.x.x",
+    "extract-text-webpack-plugin": "^3.0.2",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
     "serve": "^6.4.1",
