--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-router": "^4.2.0",
-    "react-static": "^5.1.12",
+    "react-static": "5.7.x",
     "skeleton-css": "^2.0.4"
   },
   "devDependencies": {
@@ -29,7 +29,7 @@
     "convert-tsconfig-paths-to-webpack-aliases": "^0.9.2",
     "eslint-config-react-tools": "1.x.x",
     "extract-text-webpack-plugin": "^3.0.2",
-    "node-sass": "^4.7.2",
+    "node-sass": "4.8.x",
     "sass-loader": "^6.0.6",
     "serve": "^6.4.1",
     "ts-loader": "^3.1.1",
